# Bachelor_FINAL

./: .gitignore  README.md
Client_Server/client/: client  client.cpp
Client_Server/server/: counter.py  server  server.cpp
Data/: iris.csv  iris_augmentation  iris_augmentation.cpp  iris_augmented.csv
HelloWorld/: CMakeCache.txt  CMakeLists.txt  ExampleProject  HelloWorld.cpp  Makefile  cmake_install.cmake
LogisticRegression/: CMakeCache.txt  CMakeLists.txt  Logistic  Logistic.cpp  Makefile  cmake_install.cmake  data.csv  iris.csv  iris_test.csv
LogisticScratch/: Logistic.cpp  Logistic_V2.cpp  learning_curve.csv  logistic  logisticV2
MLLogisticRegression/: Logistic.cpp
NeuralNetwork/: CMakeCache.txt  CMakeLists.txt  Makefile  Neural  Neural.cpp  cmake_install.cmake  learning_curve.csv
NeuralScratch/: Neural.cpp  Neural.hpp  iris.csv  iris_test.csv  main.cpp  neural_network
Neural_Perceptron/: Neural_Iris.cpp  Neural_Softmax.cpp  cross_entropy  cross_entropy.cpp  iris_augmented.csv  iris_augmented_test.csv  iris_classification  iris_classification.cpp  iris_real.csv  neural_network  neural_softmax  nn_v7  nn_v7.cpp  plot.ipynb  plot_errors.py  plot_loss.py  plot_weights_n1.txt  seed.txt  xor_classificatio.cpp
Neural_Perceptron/XOR/: confusion_matrix_data.csv  epoch_data.csv  weights.csv  xor  xor_classification.cpp
Neural_Perceptron/csv_plots/: acc.txt  acc2eigen.txt  confusion.py  loss.csv  (+6 more)
SVM/: iris_test.csv  output.csv  plot.py  svm  svm.cpp
XGBoostCode/: Boost.cpp  boost  iris_test.csv
knn/: knn  knn.cpp  knn.h
modular/: .gitignore
(+141 files in other folders)
